[gd_scene load_steps=3 format=3 uid="uid://byb4up8aslg7l"]

[ext_resource type="Script" path="res://menu.gd" id="1_gtl4x"]
[ext_resource type="Script" path="res://options_menu.gd" id="2_18fk7"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gtl4x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 103.189
offset_top = -151.611
offset_right = 268.189
offset_bottom = -50.611
grow_vertical = 0

[node name="start_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_button")
text = "Start"

[node name="options_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start_button")
text = "Quit"

[node name="options_menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_18fk7")

[node name="MarginContainer" type="MarginContainer" parent="options_menu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = 1111.0
offset_bottom = 579.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="options_menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="options_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit_Button" type="Button" parent="options_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Exit"

[node name="Button" type="Button" parent="options_menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="options_menu/MarginContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_pressed"]
